# test-multisensor

./: .gitmodules  CMakeLists.txt  README.md
components/HMC5883L/: CMakeLists.txt  hmc5883l.c  hmc5883l.h
components/cam_ov2640/test/: CMakeLists.txt  基于ESP32-S3和OV2640的老年人跌倒检测系统设计方案.md
components/decode/: CMakeLists.txt
components/ili9340/: CMakeLists.txt
components/ili9340/decode/: CMakeLists.txt  decode_jpeg.c
components/my_ST7735/: CMakeLists.txt  my_ST7735.c  my_ST7735.h
components/my_mpu6050/: CMakeLists.txt  my_mpu6050.c  my_mpu6050.h
components/sc7a20h/: CMakeLists.txt  Kconfig
components/sc7a20h/include/: sc7a20h.h
components/sc7a20h/src/: sc7a20h.c
components/sc7a20h/test/: CMakeLists.txt  test.c
main/: CMakeLists.txt  idf_component.yml  main.c
